--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   },
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "@koa/multer": "^2.0.2",
     "jsonapi-serializer": "^3.6.5",
     "koa": "^2.11.0",
-    "koa-bodyparser": "^4.2.1",
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.8.2"
+    "koa-static": "^5.0.0",
+    "mongoose": "^5.8.2",
+    "multer": "^1.4.2"
   }
 }
